# Encrypt-zkVM

./: .pre-commit-config.yaml  Cargo.toml  README.md  prog.rm
.github/workflows/: ci.yaml
air/: Cargo.toml
air/src/: constrains.rs  flags.rs  lib.rs
air/src/tests/: mod.rs
crypto/: Cargo.toml
crypto/src/: lib.rs  rescue.rs
examples/linear_regression/: Cargo.toml  lr.txt
examples/linear_regression/src/: main.rs  utils.rs
fhe/: Cargo.toml
fhe/src/: integer.rs  lib.rs  parameters.rs  server_key.rs  tests.rs
prover/: Cargo.toml
prover/src/: lib.rs
src/: main.rs
src/processor/: errors.rs  mod.rs  opcodes.rs  stack.rs
src/processor/tests/: mod.rs  stack.rs
src/program/: errors.rs  inputs.rs  mod.rs  opcodes.rs  parsers.rs  tests.rs
src/program/tests/: mod.rs  parsers.rs
vm/: Cargo.toml
vm/src/: lib.rs
vm/src/processor/: chiplets.rs  decoder.rs  errors.rs  mod.rs  opcodes.rs  stack.rs  system.rs
vm/src/processor/tests/: chiplets.rs  decoder.rs  mod.rs  stack.rs  system.rs
vm/src/program/: errors.rs  inputs.rs  mod.rs  parsers.rs
vm/src/program/tests/: mod.rs  parsers.rs
