[package]
name = "vm"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
fhe = { path = "../fhe" }
winterfell = { workspace = true }
prover = { path = "../prover"}
rand = { workspace = true }
crypto = { path = "../crypto" }

[dev-dependencies]
tempfile = { workspace = true }